appview: pages/templates: add opengraph tags

--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -1,15 +1,14 @@
 {{ define "title" }}{{ .Path }} at {{ .Ref }} &middot; {{ .RepoInfo.FullName }}{{ end }}
 
-
 {{ define "extrameta" }}
-    <meta name="vcs:clone" content="https://tangled.sh/{{ .RepoInfo.FullName }}"/>
-    <meta name="forge:summary" content="https://tangled.sh/{{ .RepoInfo.FullName }}">
-    <meta name="forge:dir" content="https://tangled.sh/{{ .RepoInfo.FullName }}/tree/{ref}/{path}">
-    <meta name="forge:file" content="https://tangled.sh/{{ .RepoInfo.FullName }}/blob/{ref}/{path}">
-    <meta name="forge:line" content="https://tangled.sh/{{ .RepoInfo.FullName }}/blob/{ref}/{path}#L{line}">
-    <meta name="go-import" content="tangled.sh/{{ .RepoInfo.FullNameWithoutAt }} git https://tangled.sh/{{ .RepoInfo.FullName }}">
-{{ end }}
+    {{ template "repo/fragments/meta" . }}
 
+    {{ $title := printf "%s at %s &middot; %s" .Path .Ref .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.sh/%s/blob/%s/%s" .RepoInfo.FullName .Ref .Path }}
+    
+    {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
+   
+{{ end }}
 
 {{ define "repoContent" }}
     {{ $lines := split .Contents }}
