--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -7,13 +7,25 @@
                 name="viewport"
                 content="width=device-width, initial-scale=1.0"
             />
+            <meta
+                property="og:title"
+                content="login · tangled"
+            />
+            <meta
+                property="og:url"
+                content="https://tangled.sh/login"
+            />
+            <meta
+                property="og:description"
+                content="login to tangled"
+            />
             <script src="/static/htmx.min.js"></script>
             <link
                 rel="stylesheet"
                 href="/static/tw.css?{{ cssContentHash }}"
                 type="text/css"
             />
-            <title>login</title>
+            <title>login &middot; tangled</title>
         </head>
         <body class="flex items-center justify-center min-h-screen">
             <main class="max-w-md px-6 -mt-4">
