--- a/appview/pages/templates/repo/branches.html
+++ b/appview/pages/templates/repo/branches.html
@@ -1,5 +1,12 @@
 {{ define "title" }}
-    branches · {{ .RepoInfo.FullName }}
+    branches &middot; {{ .RepoInfo.FullName }}
+{{ end }}
+
+{{ define "extrameta" }}
+    {{ $title := printf "branches &middot; %s" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.sh/%s/branches" .RepoInfo.FullName }}
+    
+    {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
 
 {{ define "repoContent" }}
