--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -1,5 +1,12 @@
 {{ define "title" }}issues &middot; {{ .RepoInfo.FullName }}{{ end }}
 
+{{ define "extrameta" }}
+    {{ $title := "issues"}}
+    {{ $url := printf "https://tangled.sh/%s/issues" .RepoInfo.FullName }}
+    
+    {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
+{{ end }}
+
 {{ define "repoContent" }}
 <div class="flex justify-between items-center gap-4">
   <div class="flex gap-4">
