--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -1,5 +1,12 @@
 {{ define "title" }}pulls &middot; {{ .RepoInfo.FullName }}{{ end }}
 
+{{ define "extrameta" }}
+    {{ $title := "pulls"}}
+    {{ $url := printf "https://tangled.sh/%s/pulls" .RepoInfo.FullName }}
+    
+    {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
+{{ end }}
+
 {{ define "repoContent" }}
     <div class="flex justify-between items-center">
         <div class="flex gap-4">
