--- a/appview/pages/templates/repo/tags.html
+++ b/appview/pages/templates/repo/tags.html
@@ -2,6 +2,13 @@
     tags · {{ .RepoInfo.FullName }}
 {{ end }}
 
+{{ define "extrameta" }}
+    {{ $title := printf "tags &middot; %s" .RepoInfo.FullName }}
+    {{ $url := printf "https://tangled.sh/%s/tags" .RepoInfo.FullName }}
+    
+    {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
+{{ end }}
+
 {{ define "repoContent" }}
 <section>
   <h2 class="mb-4 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">tags</h2>
