--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -1,5 +1,12 @@
 {{ define "title" }}{{ or .Card.UserHandle .Card.UserDid }}{{ end }}
 
+{{ define "extrameta" }}
+    <meta property="og:title" content="{{ or .Card.UserHandle .Card.UserDid }}" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://tangled.sh/{{ or .Card.UserHandle .Card.UserDid }}" />
+    <meta property="og:description" content="{{ or .Card.Profile.Description .Card.UserHandle .Card.UserDid }}" />
+{{ end }}
+
 {{ define "content" }}
 <div class="grid grid-cols-1 md:grid-cols-8 gap-6">
     <div class="md:col-span-2 order-1 md:order-1">
