--- a/appview/pages/templates/repo/pulls/fragments/pullStack.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullStack.html
@@ -1,27 +1,16 @@
 {{ define "repo/pulls/fragments/pullStack" }}
-  <div class="grid grid-cols-1 rounded border border-gray-200 dark:border-gray-700 divide-y divide-gray-200 dark:divide-gray-700">
-    {{ range $pull := .Stack }}
-      {{ $isCurrent := false }}
-      {{ with $.Pull }}
-        {{ $isCurrent = eq $pull.PullId $.Pull.PullId }}
-      {{ end }}
-      <a href="/{{ $.RepoInfo.FullName }}/pulls/{{ $pull.PullId }}" class="no-underline hover:no-underline hover:bg-gray-100 hover:dark:bg-gray-700">
-        <div class="flex gap-2 items-center px-2 {{ if $isCurrent }}bg-gray-100 dark:bg-gray-700{{ end }}">
-          {{ if $isCurrent }}
-          {{ i "arrow-right" "w-4 h-4" }}
-          {{ end }}
-          <div class="{{ if not $isCurrent }} ml-6 {{ end }} w-full py-2">
-            {{ block "summarizedHeader" $pull }} {{ end }}
-          </div>
-        </div>
-      </a>
-    {{ end }}
-  </div>
+  <p class="text-sm font-bold p-2 dark:text-white">STACK</p>
+  {{ block "pullList" (list .Stack $) }} {{ end }}
+
+  {{ if gt (len .AbandonedPulls) 0 }}
+    <p class="text-sm font-bold p-2 dark:text-white">ABANDONED PULLS</p>
+    {{ block "pullList" (list .AbandonedPulls $) }} {{ end }}
+  {{ end }}
 {{ end }}
 
 {{ define "summarizedHeader" }}
   <div class="flex text-sm items-center justify-between w-full">
-    <div class="flex items-center gap-2">
+    <div class="flex items-center gap-2 text-ellipsis">
       {{ block "summarizedPullState" . }} {{ end }}
       <span>
         <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
@@ -35,12 +24,16 @@
       {{ $commentCount := len $lastSubmission.Comments }}
       <span>
         <div class="inline-flex items-center gap-2">
+          {{ i "message-square" "w-3 h-3 md:hidden" }}
           {{ $commentCount }}
-          comment{{if ne $commentCount 1}}s{{end}}
+          <span class="hidden md:inline">comment{{if ne $commentCount 1}}s{{end}}</span>
         </div>
       </span>
       <span class="mx-2 before:content-['·'] before:select-none"></span>
-      <span>round <span class="font-mono">#{{ $latestRound }}</span></span>
+      <span>
+        <span class="hidden md:inline">round</span>
+        <span class="font-mono">#{{ $latestRound }}</span>
+      </span>
     </div>
   </div>
 {{ end }}
@@ -55,9 +48,35 @@
   {{ else if .State.IsMerged }}
     {{ $fgColor = "text-purple-600 dark:text-purple-500" }}
     {{ $icon = "git-merge" }}
+  {{ else if .State.IsDeleted }}
+    {{ $fgColor = "text-red-600 dark:text-red-500" }}
+    {{ $icon = "git-pull-request-closed" }}
   {{ end }}
 
   {{ $style := printf "w-4 h-4 %s" $fgColor }}
 
   {{ i $icon $style }}
+{{ end }}
+
+{{ define "pullList" }}
+  {{ $list := index . 0 }}
+  {{ $root := index . 1 }}
+  <div class="grid grid-cols-1 rounded border border-gray-200 dark:border-gray-700 divide-y divide-gray-200 dark:divide-gray-700">
+    {{ range $pull := $list }}
+      {{ $isCurrent := false }}
+      {{ with $root.Pull }}
+        {{ $isCurrent = eq $pull.PullId $root.Pull.PullId }}
+      {{ end }}
+      <a href="/{{ $root.RepoInfo.FullName }}/pulls/{{ $pull.PullId }}" class="no-underline hover:no-underline hover:bg-gray-100/25 hover:dark:bg-gray-700/25">
+        <div class="flex gap-2 items-center px-2 {{ if $isCurrent }}bg-gray-100/50 dark:bg-gray-700/50{{ end }}">
+          {{ if $isCurrent }}
+          {{ i "arrow-right" "w-4 h-4" }}
+          {{ end }}
+          <div class="{{ if not $isCurrent }} ml-6 {{ end }} w-full py-2">
+            {{ block "summarizedHeader" $pull }} {{ end }}
+          </div>
+        </div>
+      </a>
+    {{ end }}
+  </div>
 {{ end }}
