--- a/appview/pages/templates/repo/empty.html
+++ b/appview/pages/templates/repo/empty.html
@@ -6,11 +6,29 @@
 {{ end }}
 
 {{ define "repoContent" }}
-    <main>
+  <main>
+    {{ if gt (len .BranchesTrunc) 0 }}
+      <div class="flex flex-col items-center">
         <p class="text-center pt-5 text-gray-400 dark:text-gray-500">
-            This is an empty repository. Push some commits here.
+        This branch is empty. Other branches in this repository are populated:
         </p>
-    </main>
+        <div class="mt-4 grid grid-cols-1 divide-y divide-gray-200 dark:divide-gray-700 rounded border border-gray-200 dark:border-gray-700 w-full md:w-1/2">
+          {{ range $br := .BranchesTrunc }}
+          <a href="/{{ $.RepoInfo.FullName }}/tree/{{$br.Name}}" class="no-underline hover:no-underline">
+            <div class="flex items-center justify-between p-2">
+              {{ $br.Name }}
+              <time class="text-gray-500 dark:text-gray-400">{{ timeFmt $br.Commit.Author.When }}</time>
+            </div>
+          </a>
+          {{ end }}
+        </div>
+      </div>
+    {{ else }}
+      <p class="text-center pt-5 text-gray-400 dark:text-gray-500">
+          This is an empty repository. Push some commits here.
+      </p>
+    {{ end }}
+  </main>
 {{ end }}
 
 {{ define "repoAfter" }}
