--- a/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
@@ -9,9 +9,19 @@
                 class="p-1 border border-gray-200 bg-white dark:bg-gray-700 dark:text-white dark:border-gray-600"
             >
                 <option disabled selected>source branch</option>
+
+                {{ $recent := index .Branches 0 }}
                 {{ range .Branches }}
-                    <option value="{{ .Reference.Name }}" class="py-1">
+                    {{ $isRecent := eq .Reference.Name $recent.Reference.Name }}
+                    <option
+                        value="{{ .Reference.Name }}"
+                        {{ if $isRecent }}
+                            selected
+                        {{ end }}
+                        class="py-1"
+                    >
                         {{ .Reference.Name }}
+                        {{ if $isRecent }}(new){{ end }}
                     </option>
                 {{ end }}
             </select>
