--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -71,7 +71,7 @@
                           <p class="hidden mt-1 text-sm text-gray-600 dark:text-gray-400">{{ nl2br (index $messageParts 1) }}</p>
                           {{ end }}
                     </td>
-                    <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Author.When }}</td>
+                    <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Committer.When }}</td>
                 </tr>
                 {{ end }}
         </tbody>
@@ -141,7 +141,7 @@
                         </a>
                     </span>
                     <div class="inline-block px-1 select-none after:content-['·']"></div>
-                    <span>{{ shortTimeFmt $commit.Author.When }}</span>
+                    <span>{{ shortTimeFmt $commit.Committer.When }}</span>
                 </div>
             </div>
         {{ end }}
