--- a/appview/pages/templates/repo/pulls/fragments/pullStack.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullStack.html
@@ -72,9 +72,11 @@
       <a href="/{{ $root.RepoInfo.FullName }}/pulls/{{ $pull.PullId }}" class="no-underline hover:no-underline hover:bg-gray-100/25 hover:dark:bg-gray-700/25">
         <div class="flex gap-2 items-center px-2 {{ if $isCurrent }}bg-gray-100/50 dark:bg-gray-700/50{{ end }}">
           {{ if $isCurrent }}
-          {{ i "arrow-right" "w-4 h-4" }}
+            <div class="flex-shrink-0">
+              {{ i "arrow-right" "w-4 h-4" }}
+            </div>
           {{ end }}
-          <div class="{{ if not $isCurrent }} pl-6 {{ end }} w-full py-2">
+          <div class="{{ if not $isCurrent }} pl-6 {{ end }} flex-grow min-w-0 w-full py-2">
             {{ block "summarizedHeader" $pull }} {{ end }}
           </div>
         </div>
