appview: skip fork info query if user is not logged in
Prevents a nil dereference in the repo index route if the user is not
logged in, and hides the fork-sync button.

Fixes: <https://tangled.sh/@tangled.sh/core/issues/108>

--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -66,7 +66,7 @@
             {{ end }}
         </optgroup>
     </select>
-    {{ if .ForkInfo.IsFork }}
+    {{ if and .ForkInfo .ForkInfo.IsFork }}
         {{ $disabled := "" }}
         {{ $title := "" }}
         {{ if eq .ForkInfo.Status 0 }}
