--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -66,7 +66,9 @@
             {{ end }}
         </optgroup>
     </select>
-    {{ if and .ForkInfo .ForkInfo.IsFork }}
+    {{ $isOwner := and .LoggedInUser .RepoInfo.Roles.IsOwner }}
+    {{ $isCollaborator := and .LoggedInUser .RepoInfo.Roles.IsCollaborator }}
+    {{ if and (or $isOwner $isCollaborator) .ForkInfo .ForkInfo.IsFork }}
         {{ $disabled := "" }}
         {{ $title := "" }}
         {{ if eq .ForkInfo.Status 0 }}
