--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -66,7 +66,8 @@
             {{ end }}
         </optgroup>
     </select>
-    {{ if .ForkInfo.IsFork }}
+    {{ $isOwner := and .LoggedInUser (eq .LoggedInUser.Did .RepoInfo.OwnerDid) }}
+    {{ if and $isOwner .ForkInfo }}
         {{ $disabled := "" }}
         {{ $title := "" }}
         {{ if eq .ForkInfo.Status 0 }}
